--- a/css/main-style.css
+++ b/css/main-style.css
@@ -219,6 +219,36 @@ font-weight:normal;
 .dropdown-menu li{
 width: auto;
 }
+input[type="checkbox"]:hover{
+box-shadow:none;
+}
+/*лейбол для чекбокса*/
+.settings_checkbox_label{
+ width: 210px; /* Ширина рисунка */
+ height: 16px; /* Высота рисунка */
+ position: relative;
+}
+input[type="checkbox"]{
+display:none;
+}
+input[type="checkbox"] + span {
+ position: absolute; /* Абсолютное позиционирование */
+ left: 0; top: 0;
+ width: 100%; height: 100%;
+ background: url(images/un_check.png) no-repeat; /* Фоновый рисунок */
+ background-size: 15px 15px;
+ cursor: pointer; /* Курсор в виде руки */
+}
+input[type="checkbox"]:checked + span  {
+ background: url(images/check.png) no-repeat;
+ background-size: 15px 15px;
+}
+.text_mark{
+ width:auto; 
+ margin-left: 20px;
+ font-size: 14px;
+}
+
 
 
 
