--- a/syntaxhighlighter/styles/shCoreEclipse.css
+++ b/syntaxhighlighter/styles/shCoreEclipse.css
@@ -57,7 +57,7 @@
   margin: 1em 0 1em 0 !important;
   position: relative !important;
   overflow-y: hidden !important;
-  font-size: 1em !important;
+  font-size: 14px !important;
 }
 .syntaxhighlighter.source {
   overflow: hidden !important;
