--- a/css/main-style.css
+++ b/css/main-style.css
@@ -23,18 +23,13 @@ width: 1200px;
 height: 40;
 margin: 0 auto;
 }
-#total_wrapper{
-width: 1250px;
-height: 855px;
-margin: 0 auto;
-}
 #wrapper2{
 width:1200px;
 min-height: 1000px;
-height: auto;
+height: 650px;
 margin: 0 auto;
 clear: both;
-background: white
+background: white;
 }
 #nav_col{
 height: 600px;
@@ -49,7 +44,7 @@ color: white;
 width: 480px;
 padding: 5px;
 float: right;
-height: 990px;
+height: 600px;
 background: white;
 border: 1px solid white;
 color: #8b00ff;
@@ -137,20 +132,20 @@ font-size: 18px;
 width: 100%;
 }
 .nav-tabs {
-background-color: #750796 !important;
+/*background-color: #750796 !important;
 border-radius: 5px 5px 0px 0px;
-width: 400px;
+width: 400px;*/
 }
 .nav-tabs a{
 color: white;
 font-style: normal;
 font-size: 18px;
+min-width: 100px;
+background: #750796;
 }
 .nav-tabs li a:hover{
 color: #750796;
-border: 1px solid #750796;
 background: silver;
-border-bottom: none;
 }
 .dropdown-menu li a:hover{
  background: #750796;
@@ -202,9 +197,8 @@ margin: 0 auto;
 #tab1, #tab2, #tab3{
  border-radius: 5px;
  padding: 5px;
- height: 900px;
+ height: auto;
  width: 500px;
- overflow-y: scroll;
  float:right;
 }
 #user_login{
@@ -223,6 +217,10 @@ font-weight:normal;
 }
 .dropdown-menu li{
 width: auto;
+}
+.dropdown-menu li a{
+background: white !important;
+color: #750796 !important;
 }
 input[type="checkbox"]:hover{
 box-shadow:none;
