--- a/syntaxhighlighter/styles/shCoreEclipse.css
+++ b/syntaxhighlighter/styles/shCoreEclipse.css
@@ -1,19 +1,3 @@
-/**
- * SyntaxHighlighter
- * http://alexgorbatchev.com/SyntaxHighlighter
- *
- * SyntaxHighlighter is donationware. If you are using it, please donate.
- * http://alexgorbatchev.com/SyntaxHighlighter/donate.html
- *
- * @version
- * 3.0.83 (July 02 2010)
- * 
- * @copyright
- * Copyright (C) 2004-2010 Alex Gorbatchev.
- *
- * @license
- * Dual licensed under the MIT and GPL licenses.
- */
 .syntaxhighlighter a,
 .syntaxhighlighter div,
 .syntaxhighlighter code,
@@ -56,8 +40,9 @@
   width: 100% !important;
   margin: 1em 0 1em 0 !important;
   position: relative !important;
-  overflow-y: hidden !important;
+  overflow-y: scroll !important;
   font-size: 14px !important;
+  height: 800px; !important;
 }
 .syntaxhighlighter.source {
   overflow: hidden !important;
@@ -94,7 +79,7 @@
   border: none !important;
   background: white !important;
   padding-left: 1em !important;
-  overflow: hidden !important;
+  overflow-y: scroll !important;
   white-space: pre !important;
 }
 .syntaxhighlighter table td.gutter .line {
