--- a/uploads/InlineButton3DMenu.css
+++ b/uploads/InlineButton3DMenu.css
@@ -3,6 +3,7 @@
   display: inline-block;
   list-style: none;
   position: relative;
+  margin-left: 50px;
   padding: 0;
   -webkit-box-shadow: 0 0.5em 12px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0 0.5em 12px rgba(0, 0, 0, 0.75);
@@ -24,8 +25,6 @@ body ul.InlineButton3DMenu li {
  ul.InlineButton3DMenu li.active a {
   padding-top: 18px;
   padding-bottom: 5px;
-  color: violet;
-  text-shadow:  0 0 1em violet;
 }
  ul.InlineButton3DMenu li:active:before,
  ul.InlineButton3DMenu li.active:before {
