реализовала функцию добавления элемента в библиотеку

--- a/css/main-style.css
+++ b/css/main-style.css
@@ -51,6 +51,7 @@ color: #8b00ff;
 }
 #view_col{
 border-right: none;
+width: 510px !important;
 }
 #settings_col{
 margin-right: 0px;
@@ -100,9 +101,9 @@ height: 50px;
 background: silver;
 }
 #menu .row{
-margin-left: 220px;
-width: 550px;
+width: auto;
 float:right;
+margin-right: 5px;
 }
 #menu .row li a{
 background: silver;
@@ -142,6 +143,10 @@ font-style: normal;
 font-size: 18px;
 min-width: 100px;
 background: #750796;
+}
+.nav-tabs li a {
+padding: 5px !important;
+text-align: center;
 }
 .nav-tabs li a:hover{
 color: #750796;
@@ -250,6 +255,11 @@ input[type="checkbox"]:checked + span  {
  width:auto; 
  margin-left: 20px;
  font-size: 14px;
+}
+#add_to_lib {
+float: left;
+font-size: 18px !important;
+
 }
 
 
